--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   ],
   "author": "Kuldeep",
   "license": "ISC",
-  "description": "npm ",
+  "description": "npm package",
   "dependencies": {
     "boxen": "^8.0.1",
     "chalk": "^5.3.0",
-    "inquirer": "^12.1.0"
+    "inquirer": "^12.1.0",
+    "nodemon": "^3.1.7"
   }
 }
